[package]
name = "async-io"
version = "0.1.6"
authors = ["Glauber Costa <glommer@gmail.com>"]
edition = "2018"
description = "Async I/O and timers"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/stjepang/async-io"
homepage = "https://github.com/stjepang/async-io"
documentation = "https://docs.rs/async-io"
keywords = ["uring", "reactor"]
categories = ["asynchronous", "os"]
readme = "README.md"

[dependencies]
cfg-if = "0.1.10"
concurrent-queue = "1.1.2"
futures-lite = "0.1.9"
libc = "0.2.73"
once_cell = "1.4.0"
parking = "1.0.6"
socket2 = { version = "0.3.12", features = ["pair", "unix"] }
iou = { version = "0.2.0", path = "../iou" }
nix = "0.16.0"
aligned_alloc = "0.1"
bitmaps = "2.1.0"
typenum = "1.12"

[target.'cfg(windows)'.dependencies]
wepoll-sys-stjepang = "1.0.6"
winapi = { version = "0.3.9", features = ["ioapiset"] }

[dev-dependencies]
async-channel = "1.1.1"
async-dup = "1.2.1"
blocking = "0.5.0"
signal-hook = "0.1.16"
tempfile = "3.1.0"
waker-fn = "1.0.0"
nix = "0.16.0"

[target.'cfg(target_os = "linux")'.dev-dependencies]
inotify = { version = "0.8.3", default-features = false }
timerfd = "1.1.1"
